kubernetes/apps/cdi/cdi/operator/images.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kube-1.31/jsonschema/k8s.io/kubernetes/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdi-operator
  namespace: cdi
spec:
  template:
    spec:
      containers:
        - name: cdi-operator
          image: quay.io/kubevirt/cdi-operator:v1.66.1@sha256:470b2997b87c152b2573cdb4a3feb2a7925f60602e16c052de94e8d765b97357
